tests/expectations/compiler/statements/assign_ternary.out
DCE_ENABLED:
Error [ETYC0372117]: Expected type `bool` but type `u32` was found.
    --> compiler-test:4:30
     |
   4 |         let x: bool = true ? x: true;
     |                              ^
Error [ETYC0372118]: Received different types `u32` and `bool` for the arms of a ternary conditional.
    --> compiler-test:4:23
     |
   4 |         let x: bool = true ? x: true;
     |                       ^^^^^^^^^^^^^^
     |
     = Make both branches the same type.
Error [EAST0372009]: variable `x` shadowed by
    --> compiler-test:4:13
     |
   4 |         let x: bool = true ? x: true;
     |             ^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372117]: Expected type `bool` but type `u32` was found.
    --> compiler-test:4:30
     |
   4 |         let x: bool = true ? x: true;
     |                              ^
Error [ETYC0372118]: Received different types `u32` and `bool` for the arms of a ternary conditional.
    --> compiler-test:4:23
     |
   4 |         let x: bool = true ? x: true;
     |                       ^^^^^^^^^^^^^^
     |
     = Make both branches the same type.
Error [EAST0372009]: variable `x` shadowed by
    --> compiler-test:4:13
     |
   4 |         let x: bool = true ? x: true;
     |             ^
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
